@@ -1,0 +1,10 @@
+PKG_CXXFLAGS=`Rscript -e "Rcpp:::CxxFlags()"` -I.
+PKG_LIBS = `Rscript -e "Rcpp:::LdFlags()" `
+
+all: $(SHLIB) hack
+
+# this hack is there to prevent R CMD check from rejecting 
+# our CxxFlags
+hack:
+	mkdir tmp; cp $(SHLIB) tmp/ ; rm -fr tmp
+
