@@ -1,0 +1,5 @@
+
+rcpp_hello_world <- function(){
+	.Call( "rcpp_hello_world", PACKAGE = "@PKG@" )
+}
+
